@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: fCmd.test,v 1.31 2003/10/07 16:00:33 dgp Exp $
+# RCS: @(#) $Id: fCmd.test,v 1.32 2003/11/10 17:57:21 vincentdarley Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -2307,6 +2307,14 @@ test fCmd-28.10 {file link: linking to nonexistent path} {linkDirectory} {
     cd [workingDirectory]
     set res
 } {1 {could not create new link "abc.link" since target "abc2.doesnt" doesn't exist}}
+
+test fCmd-28.10.1 {file link: linking to nonexistent path} {linkDirectory} {
+    cd [temporaryDirectory]
+    file delete -force abc.link
+    set res [list [catch {file link doesnt/abc.link abc.dir} msg] $msg]
+    cd [workingDirectory]
+    set res
+} {1 {could not create new link "doesnt/abc.link": no such file or directory}}
 
 test fCmd-28.11 {file link: success with directory} {linkDirectory} {
     cd [temporaryDirectory]
